# pystruct

./: .gitignore  _custom_build.py  pixi.toml  pyproject.toml
benchmarks/: random_tree_crf.py
examples/: image_segmentation.py  multi_class_svm.py  multiclass_comparision_svm_struct.py  plot_binary_svm.py  plot_latent_crf.py  plot_latent_node.py  plot_latent_svm_as_crf.py  svm_as_crf.py
pystruct/inference/: _viterbi.c  maxprod.py
pystruct/learners/: n_slack_ssvm.py  one_slack_ssvm.py
pystruct/tests/test_learners/: test_frankwolfe_svm.py  test_n_slack_ssvm.py  test_one_slack_ssvm.py  test_perceptron.py  test_subgradient_svm.py
pystruct/tests/test_models/: test_latent_node_crf.py
pystruct/tests/test_utils/: test_utils_logging.py
src/: utils.c
