[project]
name = "pystruct"
version = "0.3.3"
description = ""
authors = []
requires-python = ">=3.10"
dependencies = [
    "numpy", "cvxopt", "future", "scikit-learn"
]

[project.optional-dependencies]
examples = [
    "matplotlib"
]

[tool.setuptools]
py-modules = ["_custom_build"]

[tool.setuptools.cmdclass]
build_py = "_custom_build.build_py"

[tool.setuptools.packages.find]
where = ["."]

[tool.pixi.tasks]
example = "python examples/plot_binary_svm.py"

[build-system]
requires = ["setuptools", "wheel", "Cython", "numpy"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pystruct = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
# $ pixi run --environment examples example
examples = { features = ["examples"], solve-group = "default" }
